# OMPEval

./: .gitignore  CMakeLists.txt  main.cpp
omp/: EquityCalculator.cpp
